Maybe fixes reusable workflows

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,18 +8,12 @@ env:
 jobs:
   test:
     name: Test all modes 📝
-    runs-on: ubuntu-latest
-    steps:
-      - uses: ./test.yml
+    uses: ./test.yml
 
   build:
     needs: test
     name: Builds for all environments 🖥️
-    runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-    steps:
-      - uses: ./build.yml
+    uses: ./build.yml
 
 
   deployPages:
