--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
   build:
     needs: test
     name: Builds for all environments 🖥️
-    uses: ./github/workflows/build.yml
+    uses: ./.github/workflows/build.yml
 
 
   deployPages:
