--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,9 +1,10 @@
 ﻿name: Test
 
-on: workflow_call
-
-env:
-  UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+on:
+  workflow_call:
+    secrets:
+      UNITY_LICENSE:
+        required: true
 
 jobs:
   testRunner:
