Uses env namespace instead of secrets

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,14 +10,14 @@ jobs:
     name: Test all modes 📝
     uses: ./.github/workflows/test.yml
     with:
-      UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+      UNITY_LICENSE: ${{ env.UNITY_LICENSE }}
 
   build:
     needs: test
     name: Builds for all environments 🖥️
     uses: ./.github/workflows/build.yml
     with:
-      UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+      UNITY_LICENSE: ${{ env.UNITY_LICENSE }}
 
 
   deployPages:
