--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,14 +10,16 @@ jobs:
     name: Test all modes 📝
     uses: ./.github/workflows/test.yml
     with:
-      UNITY_LICENSE: env.UNITY_LICENSE
+      secrets:
+        UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
 
   build:
     needs: test
     name: Builds for all environments 🖥️
     uses: ./.github/workflows/build.yml
     with:
-      UNITY_LICENSE: env.UNITY_LICENSE
+      secrets:
+        UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
 
 
   deployPages:
