Readds license env to resuable workflows

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,6 +6,9 @@ on:
       UNITY_LICENSE:
         required: true
 
+env:
+  UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+
 jobs:
   buildWebGL:
     name: Build for WebGL 🖥️
