--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,8 @@
-name: GameCI Template 🎮
+name: Test, Build and Deploy 🎮
 
-on: push
+on:
+  push:
+    branches: ['master']
 
 env:
   UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
@@ -42,4 +44,3 @@ jobs:
         with:
           branch: gh-pages
           folder: build/WebGL
-
