--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Test, Build and Deploy 🎮
 
 on:
   push:
-    branches: ['master']
+    branches: ['main']
 
 env:
   UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
