--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -2,7 +2,7 @@
 
 on:
   push:
-    paths: ["Assets/**", ".github/workflows"]
+    paths: ["Assets/**", ".github/workflows/**"]
     branches: ['*', '!main']
     
 
