--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -3,7 +3,7 @@
 on:
   push:
     branches: ['*', '!main']
-    
+    paths: ['Assets/**', '.github/**']
 
 env:
   UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
