Cleans up web-gl branch settings and webgl disables compression

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,3 +36,5 @@ jobs:
         with:
           branch: gh-pages
           folder: build/WebGL
+          commit-message: Deploy
+          single-commit: true
