--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -3,6 +3,7 @@
     "com.ninito.unityprojectlinter": "https://github.com/ninito-ph/UnityProjectLinter.git",
     "com.unity.collab-proxy": "1.15.17",
     "com.unity.feature.2d": "1.0.0",
+    "com.unity.ide.rider": "3.0.14",
     "com.unity.ide.visualstudio": "2.0.14",
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.test-framework": "1.1.31",
