--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ Assets/Plugins/Editor/JetBrains*
 [Bb]uild/
 [Bb]uilds/
 [Ll]ogs/
+[Uu]serSettings/
 Assets/AssetStoreTools*
 
 # Visual Studio cache directory
@@ -50,4 +51,3 @@ sysinfo.txt
 *.unitypackage
 
 .vsconfig
-UserSettings/
